# FIB-PE-Probabilidad-y-Estadistica

./: README.md
Extras/: Instrucciones basicas.R
Proj_B7/app/: .clang-format  .gitignore  CMakeLists.txt  run.ps1  run.pws  run.sh
Proj_B7/app/base/: CMakeLists.txt
Proj_B7/app/base/include/base/: application.hh  config_loader.hh  gentree.hh  logger.hh  random.hh  scoped_timer.hh  search.hh
Proj_B7/app/base/src/: gentree.cc  logger.cc  random.cc  scoped_timer.cc  search.cc
Proj_B7/app/generator/: CMakeLists.txt  generator_config.toml
Proj_B7/app/generator/include/: config_loader.hh  generator_app.hh
Proj_B7/app/generator/src/: config_loader.cc  generator_app.cc  main.cc
Proj_B7/app/tester/: CMakeLists.txt
Proj_B7/app/tester/include/: tester_app.hh  tree_loader.hh
Proj_B7/app/tester/resources/: g1.txt  g2.txt  g3.txt  g4.txt  g7.txt  g8.txt
Proj_B7/app/tester/src/: main.cc  tester_app.cc  tree_loader.cc
Proj_B7/docs/Protocolo/: Protocol.docx
Proj_B7/scripts/: .RData  .Rhistory  summary.R  summary_self_contained.R  test_report.csv
Proyecto B7/: LÉEME  Makefile  bfs.cc  data_frame.csv  graph.hh  graphs_input  info.hh  main.cc  main_bfs.cc  main_dfs.cc  procedures.hh  script.r
Proyecto B7/graph_data/: G1  G10  G11  G12  G13  G14  G15  G16  G17  G18  G19  G2  G20  G21  G3  G4  G5  G6  G7  G8  G9  GA  GB  GC  GD  GE  GF  GG  GH  GI  GJ  GK  GL  GM  GN  GO  GP  GQ  GR  GS  (+1 more)
Proyecto B7/graph_picture/: __readme__
e-status/Bloc B/: Noodle-trans.r
